fixed body alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,8 @@
 
 body{
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  align-items: center;
   /* padding: 40px; */
   /* background-color: rgb(26, 28, 54); */
   background-color: var(--bg-color);
